# ChangeLog for xfce-extra/thunar-thumbnailers
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/Attic/ChangeLog,v 1.7 2007/03/31 09:57:53 armin76 Exp $

  30 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  thunar-thumbnailers-0.1.2.ebuild:
  Add ~ia64

  28 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  thunar-thumbnailers-0.1.2.ebuild:
  Keyworded ~sparc

*thunar-thumbnailers-0.1.2 (26 Mar 2007)

  26 Mar 2007; Samuli Suominen <drac@gentoo.org>
  +thunar-thumbnailers-0.1.2.ebuild:
  Version bump.

  10 Mar 2007; Peter Weller <welp@gentoo.org>
  thunar-thumbnailers-0.1.1.ebuild:
  Stable on amd64 wrt bug 169987

  09 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  thunar-thumbnailers-0.1.1.ebuild:
  stable x86; bug #169987

  22 Feb 2007; Markus Rothe <corsair@gentoo.org>
  thunar-thumbnailers-0.1.1.ebuild:
  Added ~ppc64

*thunar-thumbnailers-0.1.1 (18 Feb 2007)

  18 Feb 2007; Samuli Suominen <drac@gentoo.org>
  +thunar-thumbnailers-0.1.1.ebuild:
  Initial commit for bug 167489, thanks to Erlend Davidson.
