@@ -1,5 +1,6 @@
 DIST thunar-thumbnailers-0.1.1.tar.bz2 78315 RMD160 12a075a61b2a1a8f2247fc62e619edc0ef7a2d6e SHA1 0baa636d04bacbe2550bcd42141a18073e3f6e1a SHA256 27bd99cf00ae57cb1a080474a13605316580b313a967f5f14d6f3dbab4292a94
 DIST thunar-thumbnailers-0.1.2.tar.bz2 78224 RMD160 a411d5e607e41193c016665c762ec9b18a538bee SHA1 8b56eefe4893085cb60f8eae2a410bb7514d8d43 SHA256 2baa9930a14d3df7a5d50c97f0b6d00995b60f735c833275bf5bcf77399aaa96
+DIST thunar-thumbnailers-0.2.0.tar.bz2 79301 RMD160 085ed54142d59a04278a6c2d6067e32e041ebe1a SHA1 14fb1a3be8740252e1c02caac6a9216eb0187adc SHA256 e096fd5596d144cf95394a24eadf9135cfc12fee1f53461f9c881b64d6349335
 EBUILD thunar-thumbnailers-0.1.1.ebuild 1026 RMD160 8dec30a512b13b4edbb32d7bd5f1d2edea9dd12f SHA1 dfa5041397d1007cbb5ca453524cf914da75750c SHA256 0a9ea9ecca0a60b50113fa66c05ca24afd9cbb09b29581a39f894300b4aaf407
 MD5 ed32a1ec3f59fc658277055730dfe7f5 thunar-thumbnailers-0.1.1.ebuild 1026
 RMD160 8dec30a512b13b4edbb32d7bd5f1d2edea9dd12f thunar-thumbnailers-0.1.1.ebuild 1026
@@ -8,10 +9,14 @@ EBUILD thunar-thumbnailers-0.1.2.ebuild 1082 RMD160 eef1981351e5ab53b64faf5461f5
 MD5 b15c6d5ea065ec35a18e68da9822330f thunar-thumbnailers-0.1.2.ebuild 1082
 RMD160 eef1981351e5ab53b64faf5461f5afc1ba816988 thunar-thumbnailers-0.1.2.ebuild 1082
 SHA256 16a9d0b664e6453fe94dc789ba884c8fa22f4932b9893a0926ca09c02a0ba618 thunar-thumbnailers-0.1.2.ebuild 1082
-MISC ChangeLog 1111 RMD160 c2ef358475503f3fdb89e1b186325ce8863f1225 SHA1 091d9954359879e6691bba120d1b16420e55b066 SHA256 27acfc49e723894430710c2d96477f58f02cea17d51cc3f6ccf10845277bee38
-MD5 0db52d78c8712731665dac441c66500a ChangeLog 1111
-RMD160 c2ef358475503f3fdb89e1b186325ce8863f1225 ChangeLog 1111
-SHA256 27acfc49e723894430710c2d96477f58f02cea17d51cc3f6ccf10845277bee38 ChangeLog 1111
+EBUILD thunar-thumbnailers-0.2.0.ebuild 1143 RMD160 b5248e773bed6ee4fa8cb553d99764c01d8ee915 SHA1 3d93578ad53546ec4aa9dcdf2c0bfa87c2eba19e SHA256 81fd3375e4dcabef7ea26dc41d16756ca4f11ffcb39b1a89b877628826706c15
+MD5 fd2c3361cca4faabc9df099117a54ad6 thunar-thumbnailers-0.2.0.ebuild 1143
+RMD160 b5248e773bed6ee4fa8cb553d99764c01d8ee915 thunar-thumbnailers-0.2.0.ebuild 1143
+SHA256 81fd3375e4dcabef7ea26dc41d16756ca4f11ffcb39b1a89b877628826706c15 thunar-thumbnailers-0.2.0.ebuild 1143
+MISC ChangeLog 1306 RMD160 e58d7640a55ab6a9c9ecd0e8e2596d1f8a699ac6 SHA1 08052489ce4622dae2b3a09186a6fd715a6aada5 SHA256 110a6b22ff705a411dbe515db905c5c94c1f05dbc82d79ba36f924f3a6758cd0
+MD5 a12dfe6abd43226bbe37361d368ccedf ChangeLog 1306
+RMD160 e58d7640a55ab6a9c9ecd0e8e2596d1f8a699ac6 ChangeLog 1306
+SHA256 110a6b22ff705a411dbe515db905c5c94c1f05dbc82d79ba36f924f3a6758cd0 ChangeLog 1306
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
@@ -22,3 +27,6 @@ SHA256 e203d9d711a285b3b757b809c57891230817d27b0787829435778b12acba07f5 files/di
 MD5 e797f1baae965c0967eefbc5760fb7bf files/digest-thunar-thumbnailers-0.1.2 277
 RMD160 44635a7de26c61b4d86914461edf37ec0bc2dd79 files/digest-thunar-thumbnailers-0.1.2 277
 SHA256 3494c787c606db0d8beb0cdcf52d7daf0eb9ec8140d1503665e70d56639d1380 files/digest-thunar-thumbnailers-0.1.2 277
+MD5 7b268694a3087ebaed1b357bf063ea07 files/digest-thunar-thumbnailers-0.2.0 277
+RMD160 c7eb615afc2a5ef41fad7175d7f06b91a5939b67 files/digest-thunar-thumbnailers-0.2.0 277
+SHA256 876b619472884594deae901cdda52b4ebff0768fec9480525c44a587e30aadfc files/digest-thunar-thumbnailers-0.2.0 277
