@@ -1,0 +1,3 @@
+MD5 9d1e5ebe36c8672048062392d4f329b9 thunar-thumbnailers-0.2.0.tar.bz2 79301
+RMD160 085ed54142d59a04278a6c2d6067e32e041ebe1a thunar-thumbnailers-0.2.0.tar.bz2 79301
+SHA256 e096fd5596d144cf95394a24eadf9135cfc12fee1f53461f9c881b64d6349335 thunar-thumbnailers-0.2.0.tar.bz2 79301
