@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/thunar-thumbnailers
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/Attic/ChangeLog,v 1.7 2007/03/31 09:57:53 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/Attic/ChangeLog,v 1.8 2007/04/02 13:34:59 drac Exp $
+
+*thunar-thumbnailers-0.2.0 (02 Apr 2007)
+
+  02 Apr 2007; Samuli Suominen <drac@gentoo.org>
+  +thunar-thumbnailers-0.2.0.ebuild:
+  Version bump; this version supports video thumbnails using ffmpeg.
 
   30 Mar 2007; Raúl Porcel <armin76@gentoo.org>
   thunar-thumbnailers-0.1.2.ebuild:
